# quizaic

./: .gitignore  CODEOWNERS  Makefile  README.md  cors.json  prompt.txt  run.sh  setup.sh  test_gen.py  x.py
api/pyquizaic/: pyproject.toml  quizgen.py  requirements.txt
api/pyquizaic/generators/image/: imagegen.py
api/pyquizaic/generators/quiz/: basequizeval.py  basequizgen.py  prompt.txt  question_grader.py  quizgenfactory.py
api/pyquizaic/tests/: test_imagegen.py  test_opentrivia.py  test_palm.py  test_question_grader.py  test_quizgen.py
pyquizrd/: README.md  gen.py  pyproject.toml  requirements.txt
pyquizrd/generators/: quizgenfactory.py
pyquizrd/generators/gpt/: quizgen.py
pyquizrd/generators/image/: imagegen.py
pyquizrd/generators/jeopardy/: pruned_jeopardy.json.Z  quizgen.py
pyquizrd/generators/manual/: quizgen.py
pyquizrd/generators/opentrivia/: quizgen.py
pyquizrd/generators/palm/: imagegen.py  quizgen.py
pyquizrd/generators/quiz/: basequizeval.py  basequizgen.py  question_grader.py  quizgenfactory.py
pyquizrd/generators/quiz/gpt/: quizgen.py
pyquizrd/generators/quiz/jeopardy/: quizgen.py
pyquizrd/generators/quiz/manual/: quizgen.py
pyquizrd/generators/quiz/opentrivia/: quizgen.py
pyquizrd/generators/quiz/palm/: quizeval.py  quizgen.py
pyquizrd/pyquizrd/: pyquizrd.py
pyquizrd/pyquizrd/gpt/: gpt.py
pyquizrd/pyquizrd/jeopardy/: jeopardy.py
pyquizrd/pyquizrd/manual/: manual.py
pyquizrd/pyquizrd/opentrivia/: opentrivia.py
pyquizrd/pyquizrd/palm/: palm.py  prompt2.txt
pyquizrd/pyquizrd/palm/prompts/: prompt_eval1.txt  prompt_eval2.txt  prompt_eval3.txt
pyquizrd/pyquizrd/palm/quizzes/: quiz_americanhistory.json  quiz_cyprus_valid.json  (+2 more)
pyquizrd/tests/: test_imagegen.py  test_opentrivia.py  test_palm.py  test_question_grader.py  test_quizgen.py
(+702 files in other folders)
