[tool.poetry]
name = "pyquizaic"
version = "0.1.6"
description = ""
authors = ["marcacohen <marcacohen@gmail.com>"]
readme = "README.md"
include = ["pyquizaic/jeopardy/pruned_jeopardy.json"]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.240"
vertexai = "^0.0.1"
google-cloud-aiplatform = "^1.31.0"
pandas = "^2.0.3"
pillow = "^10.0.0"
google-cloud-storage = "^2.10.0"
google-auth = "^2.22.0"
thefuzz = "^0.20.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
